added update and delete endpoint to spells
